# coder-templates

rss-aggregator/: config.yaml  pyproject.toml
rss-aggregator/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
rss-aggregator/src/rss_aggregator/: api.py  config.py  db.py  logger.py  main.py  models.py  schemas.py  scrape.py  transformer.py
