[project]
name = "rss-aggregator"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcin Tojek",email = "tojek.m@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "rss_aggregator.main:start"