[project]
name = "rss-aggregator"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcin Tojek",email = "tojek.m@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "pgvector (>=0.4.1,<0.5.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "feedparser (>=6.0.11,<7.0.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "keybert (>=0.9.0,<0.10.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "rss_aggregator.main:start"
scrape = "rss_aggregator.scrape:scrape"